--- a/podium-helper/Dockerfile
+++ b/podium-helper/Dockerfile
@@ -1,1 +1,6 @@
 FROM node:15.13-alpine
+WORKDIR /podium-helper
+ENV PATH="./node_modules/.bin:$PATH"
+COPY . .
+RUN npm run build
+CMD ["npm", "start"]
