--- a/podium-helper/Dockerfile
+++ b/podium-helper/Dockerfile
@@ -1,7 +1,13 @@
 FROM node:15.13-alpine
+
 WORKDIR /podium-helper
-ENV PATH="./node_modules/.bin:$PATH"
-COPY package.json ./
+
+
+COPY package.json package.json
+COPY package-lock.json package-lock.json
+
+RUN npm install
+
 COPY . .
-RUN npm run build
+
 CMD ["npm", "start"]
