--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.9.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
