--- a/podium-helper/Dockerfile
+++ b/podium-helper/Dockerfile
@@ -3,7 +3,7 @@ FROM node:15.13-alpine
 WORKDIR /podium-helper
 
 
-COPY package.json package.json
+COPY package.json ./package.json
 COPY package-lock.json package-lock.json
 
 RUN npm install
