--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@date-io/date-fns": "^2.14.0",
     "@date-io/dayjs": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.9.2",
+    "@mui/styled-engine": "^5.8.7",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
