--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
