--- a/Mongo_DB/package.json
+++ b/Mongo_DB/package.json
@@ -6,6 +6,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "web-vitals": "^2.1.4"
   },
