--- a/Mongo_DB/package.json
+++ b/Mongo_DB/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "es7": "^1.0.8-beta.4",
     "express": "^4.18.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
