--- a/Mongo_DB/package.json
+++ b/Mongo_DB/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "es7": "^1.0.8-beta.4",
     "express": "^4.18.1",
+    "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "web-vitals": "^2.1.4"
