--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine": "^5.8.7",
+    "@mui/x-data-grid": "^5.17.7",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
