--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "fuse.js": "^6.6.2",
+    "immer": "^10.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
