--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -57,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.3.1"
+    "chai": "^4.3.8",
+    "cypress": "^10.3.1",
+    "mocha": "^10.2.0"
   }
 }
