--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -59,6 +59,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "chai": "^4.3.8",
     "cypress": "^10.3.1",
+    "dotenv": "^16.3.1",
     "mocha": "^10.2.0"
   }
 }
