--- a/podium-helper/package.json
+++ b/podium-helper/package.json
@@ -20,8 +20,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "immer": "^10.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
@@ -60,6 +64,7 @@
     "chai": "^4.3.8",
     "cypress": "^10.3.1",
     "dotenv": "^16.3.1",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "webpack": "^5.89.0"
   }
 }
