--- a/express_mongo/package.json
+++ b/express_mongo/package.json
@@ -21,8 +21,10 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.3",
+    "axios": "^1.6.2",
     "dotenv": "^16.0.3",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^2.0.21",
     "typescript": "^5.0.2"
   }
