--- a/express_mongo/package.json
+++ b/express_mongo/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.9.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2",
     "ts-node": "^10.9.1"
